# acoustic_reliefs

./: .gitignore  .gitmodules  README.md  acoustics_opt.py  acoustics_opt_nograd.py  acoustics_opt_relief.py  acoustics_pipeline.py  analytic_sphere.py  arsound_color.py  arsound_test.py  basrelief.py  cliploss2.py  edit_tomls.py  environment.yml  hres_optim.py  hres_optim_relief.py  large_hres.py  large_optim.py  plot_coeffs.py  polar_plots.py  pressure_calcs.py  relobralo.py  rerender.py  rerender2.py  t_final.npy  test.py  test_sds.py  tracker_opt.py  verify_gradients.py  view_gradients.py
acoustics3d/: CMakeLists.txt  sphere.cpp
acoustics3d/include/: acoustics3d.h  adjoint.h  constants.h  derivatives.h  helpers.h  integrate.h
acoustics3d/src/: aca.cpp  acoustics3d.cpp  adjoint.cpp  derivatives.cpp  helpers.cpp  hmatrix.cpp  integrate.cpp  read_obj.cpp
acoustics3d_cpp/: CMakeLists.txt  README.md  pyproject.toml
acoustics3d_cpp/include/: aca.h  acoustics3d.h  clustertree.h  helpers.h  hmatrix.h  read_obj.h  sphere.h
acoustics3d_cpp/src/: acoustics3d.cpp  adjoint.cpp  clustertree.cpp
acoustics3d_cpp/src/acoustics3d/: __init__.py
arsound/: desk_vals_1000Hz.npy  desk_vals_100Hz.npy  desk_vals_400Hz.npy
configs/: ac_0.01.toml  ac_0.01_near.toml  ac_0.02.toml  ac_0.02_0.9.toml  ac_0.02_0.9_multifreq3.toml  ac_0.02_0.9_multifreq_sample.toml  ac_0.02_1500.toml  ac_0.02_1550.toml  ac_0.02_1650.toml  ac_0.02_multifreq.toml  ac_0.02_near.toml  ac_0.04.toml  ac_0.04_near.toml  ac_bernd_norm.toml  ac_bunny_0.9_multifreq_sample.toml  ac_cat_0.04_no_norm.toml  ac_cat_0.6_multifreq_sample.toml  ac_cat_norm_0.9.toml  ac_corgi_0.6_multifreq_sample.toml  ac_dragon_rect_multifreq_sample.toml  ac_matterhorn_0.6_multifreq_sample_0.toml  ac_matterhorn_norm.toml  ac_mountains_0.6_multifreq_sample.toml  ac_peppers_norm.toml  ac_trees_1.5.toml  ac_tux_norm.toml  ac_waves_rect_multifreq_sample.toml  base.toml  cat_0.04.toml  dirlight.toml  fab_cat_0.6.toml  fab_waves_square2_0.9.toml  floral_pattern.toml  floral_pattern_0.9.toml  flowers.toml  image_only.toml  io_cat_0.6.toml  io_trees_0.6.toml  io_waves_square2_0.9.toml  matterhorn2_0.9.toml  (+28 more)
configs/_sig2025/: ac_0.02_0.6_multifreq_sample.toml  ac_bunny_0.6_multifreq_sample.toml  ac_cat_0.6_multifreq_sample.toml  ac_cat_0.9_multifreq_sample.toml  ac_corgi_0.9_multifreq_sample.toml  ac_harvesters_rect_multifreq_sample.toml  ac_matterhorn_0.6_multifreq_sample.toml  ac_matterhorn_0.9_multifreq_sample.toml  ac_matterhorn_norm_multifreq.toml  ac_merlion_0.6.toml  ac_mountains_0.9_multifreq_sample.toml  ac_peppers_0.9_multifreq_sample.toml  io_cat_0.6.toml  io_matterhorn2_0.6.toml
configs/old/: ac_0.02.toml  ac_0.02_0.9_multifreq1.toml  ac_0.02_0.9_multifreq2.toml  ac_0.02_1200.toml  ac_0.02_1250.toml  ac_0.02_1300.toml  ac_0.02_1700.toml  ac_0.3.toml  ac_cat_norm.toml  ac_cat_norm_0.3.toml  ac_cat_norm_multifreq.toml  ac_matterhorn_norm.toml  ac_matterhorn_norm_0.3.toml  ac_matterhorn_norm_0.9.toml  ac_mountains_norm.toml  ac_mountains_norm_0.9.toml  ac_peppers_norm_0.9.toml  ac_siggraph_0.6_multifreq_sample.toml  ac_spot_0.6_multifreq_sample.toml
misc/: README.md  analytic_sphere.py  pressure_calcs.py
pyoptim/: cliploss.py  diffmesh.py  diffmesh2.py  helpers.py  losses.py  mesher.py  sdsloss.py
test-data/envmaps/: evening_sun.hdr  museum.hdr  overcast_metro.hdr  rainy_day.hdr
test-data/images/: credits.txt
