[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2"]
build-backend = "scikit_build_core.build"

[project]
name = "acoustics3d"
version = "1.0.0"
description = "C++ BEM-based acoustic solver with Python bindings for 3D acoustic relief optimization"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Jeremy Chew", email = "jechew@ethz.ch" },
]

[project.urls]
Homepage = "https://github.com/mickey1356/acoustic_reliefs"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"
# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"
# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"